@@ -112,7 +112,6 @@
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
-        <java.release>11</java.release>
     </properties>
 
     <modules>
@@ -245,7 +244,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <release>${java.release}</release>
                         <compilerArgs>
                             <arg>-h</arg>
                             <arg>target/headers</arg>
@@ -324,54 +322,13 @@
 
     <profiles>
         <profile>
-            <id>java21</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <java.release>21</java.release>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven-surefire-plugin.version}</version>
-                        <configuration>
-                            <argLine>
-                                -XX:+IgnoreUnrecognizedVMOptions
-                                --add-opens=java.base/java.lang=ALL-UNNAMED
-                                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                                --add-opens=java.base/java.io=ALL-UNNAMED
-                                --add-opens=java.base/java.net=ALL-UNNAMED
-                                --add-opens=java.base/java.nio=ALL-UNNAMED
-                                --add-opens=java.base/java.util=ALL-UNNAMED
-                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
-                                --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
-                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-                                --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
-                                --add-opens=java.base/sun.security.action=ALL-UNNAMED
-                                --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
-                                --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
-                                -Djdk.reflect.useDirectMethodHandle=false
-                                -Dio.netty.tryReflectionSetAccessible=true
-                            </argLine>
-                            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
-                            <useSystemClassLoader>false</useSystemClassLoader>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>jdk11+</id>
             <activation>
                 <jdk>[11,)</jdk>
             </activation>
             <properties>
-                <java.release>11</java.release>
-                <maven.compiler.release>${java.release}</maven.compiler.release>
+
+                <maven.compiler.release>11</maven.compiler.release>
             </properties>
             <build>
                 <plugins>
